# scrapyard_jam

./: flake.nix  scrapyard.cabal
app/: Main.hs
