cabal-version:      3.0
name:               functional-programming
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             ARLJohnston
maintainer:         40921666+ARLJohnston@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable functional-programming
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.17.2.0,
      QuickCheck ^>= 2.14.2,
      h-raylib,
      random

    hs-source-dirs:   app
    default-language: Haskell2010
